src/Pages/Home.css
.header-background {
  width: 100%;
  height: 100vh;
  position: absolute;
  z-index: -10;
  top: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  /* From https://css.glass */
  background: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}
.header-content h1 {
  font-weight: 600;
}
.header-container {
  height: 100vh;
  padding: 0rem 2rem;
  max-width: 60rem;
  margin: 0 auto;
  display: flex;
}

.home-face {
  width: calc(100vh / 1.5);
  height: calc(100vh / 1.5);
  position: absolute;
  bottom: -4rem;
  left: calc(100vw / 2);
  z-index: -10;
}

.sphere {
  display: block;
  border-radius: 50%;
  position: absolute;
}

.first,
.second,
.third {
  background: rgb(93, 79, 255);
  background: linear-gradient(
    125deg,
    rgba(93, 79, 255, 1) 0%,
    rgba(189, 79, 255, 1) 100%
  );
}

.first {
  width: 7rem;
  height: 7rem;
  top: 25%;
  left: 50%;
  z-index: -20;
  animation: moveFirst 3s infinite;
}

@keyframes moveFirst {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(0.75rem);
  }
  100% {
    transform: translateY(0);
  }
}

.second {
  width: 12rem;
  height: 12rem;
  bottom: 0;
  z-index: -21;
  left: 40vw;
  animation: moveSecond 4s infinite;
}

@keyframes moveSecond {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-0.75rem);
  }
  100% {
    transform: translateY(0);
  }
}

.third {
  width: calc(100vh / 1.8);
  height: calc(100vh / 1.8);
  right: -6rem;
  top: -2rem;
  z-index: -22;
  animation: moveThird 5s infinite;
}

@keyframes moveThird {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(1.5rem);
  }
  100% {
    transform: translateY(0);
  }
}

.header-content {
  margin: auto 0 !important;
}

.sectionHeading {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-bottom: 2rem;
}

.sectionHeading {
  color: #323232;
}

.headerLine {
  width: 2rem;
  height: 1.5px;
  background-color: #323232;
  border: none;
  margin: 0;
}

.linkButton {
  color: #5d4fff;
  margin-left: auto;
}

/* Standard Containers */
.container {
  padding: 0rem 2rem;
  margin-top: 3.25rem !important;
  margin-bottom: 3.25rem !important;
  max-width: 60rem;
  margin: 0 auto;
}
/*---------------------*/
/* Last Containers */
.lastContainer {
  margin-bottom: 7.5rem !important;
}
/*---------------------*/

.about-me .sectionHeading .headerLine {
  background-color: #fff;
}

.about-me .sectionHeading h2,
.about-me .paragraph-content {
  color: #fff;
}

.header-container h1 {
  font-size: 4rem;
  margin-top: -1rem;
  color: #2e2e2e;
}

.header-title {
  width: 80%;
  margin: 3rem 0rem;
  font-size: 1.25rem;
  font-weight: 300;
  color: #2e2e2e;
}

.home-header-socials {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.social-icons {
  display: flex;
  gap: 0.5rem;
}

.home-header-buttons {
  display: flex;
  gap: 1rem;
}
.workItemButton{
  padding-top:4rem;
  display: flex;
  justify-content: center;
}

.roundbutton {
  width: 11.25rem;
  height: 2.5rem;
  border-radius: 3rem;
  border: none;
  font-family: "Montserrat", sans-serif;
  cursor: pointer;
}
.secondary-button{
  background: none;
  border: 1.5px solid #5d4fff;
  color: #5d4fff;
  font-weight: 500;
}
.secondary-button:hover{
  background:rgba(93, 79, 255, 0.05);
}
.primary-button {
  color: #fff;
  background: rgb(189, 79, 255);
  background: linear-gradient(
    125deg,
    rgba(189, 79, 255, 1) 0%,
    rgba(93, 79, 255, 1) 100%
  );
}

.primary-button:hover {
  opacity: 0.9;
}

.paragraph-content {
  width: 60%;
}

/*Contact Form*/
.contactContainer {
  display: flex;
}

.halfForm {
  flex: 1;
}
/*---------------------*/

@media only screen and (max-width: 480px) {
  .header-content h1 {
    font-size: 3rem;
  }
  .contactContainer {
    flex-direction: column;
  }
  .header-background {
    height: 100vh;
  }
  .header-title {
    margin: 2rem 0rem !important;
    font-size: 1rem;
  }
  .home-header-socials {
    gap: 3rem;
    flex-direction: column !important;
    align-items: flex-start;
  }

  .my-work .sectionHeading {
    padding: 0rem 1rem;
  }

  .my-work-container h2 {
    padding-left: 1rem;
  }

  .header-container,
  .container {
    padding: 0 1rem;
  }
.workItemButton{
  padding-top: 2rem;
  display: block;
}
.viewAllButton{
  width: 100%;
}
  .home-face {
    display: none;
  }
  .paragraph-content {
    width: 100%;
  }
  .first {
    bottom: 35%;
    width: 6rem;
    height: 6rem;
    top: auto;
    left: 70%;
  }
  .second {
    left: -15%;
    bottom: 1rem;
    width: 8rem;
    height: 8rem;
    z-index: -30;
  }
  .third {
    bottom: 0;
    right: -6rem;
    top: -4rem;
    width: 15rem;
    height: 15rem;
  }
  .page-body {
    width: 100%;
    padding: 0 0.5rem;
  }
  .home-header-socials {
    flex-direction: row;
  }
}

